# appz-budget

./: .dockerignore  .env.example  .gitignore  .onedev-buildspec.yml  2025 Home Budget - Kleyson.xlsx  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Home Budget - Template.xlsx  LICENSE  Makefile  PROJECT_NOTES.md  README.md  SECURITY.md  backup.sh  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  install-hooks.sh  start_backend.sh
backend/: .coveragerc  .env.example  alembic.ini  database.py  dependencies.py  drizzle.config.ts  exceptions.py  main.py  models.py  package.json  pyproject.toml  pytest.ini  schemas.py  seed.py
backend/alembic/: env.py
backend/alembic/versions/: a2380a69bfd9_add_color_to_categories_and_periods.py  (+14 more)
backend/controllers/: __init__.py  auth_controller.py  backup_controller.py  category_controller.py  expense_controller.py  health_controller.py  import_controller.py  income_controller.py  income_type_controller.py  month_controller.py  period_controller.py  summary_controller.py
backend/drizzle/: 0000_swift_pretty_boy.sql
backend/models/: __init__.py  category.py  expense.py  income.py  income_type.py  month.py  period.py  seed.py  user.py
backend/public/: index-B0nyejYk.js  index-BA5EMum9.css  index-BUELFr3F.js  index-C4Kbcfys.css  index-CGdyGfBS.js  index-D9d7UfiW.js  index-Dt1r2wz7.js  index-ySpafPi8.css  index.html  site.webmanifest  sw.js
backend/repositories/: __init__.py  category_repository.py  expense_repository.py  income_repository.py  income_type_repository.py  month_repository.py  period_repository.py  user_repository.py
backend/services/: __init__.py  category_service.py  expense_service.py  import_service.py  income_service.py  income_type_service.py  month_service.py  period_service.py  summary_service.py  user_service.py
backend/src/: app.ts  config.ts  index.ts  seed.ts
backend/tests/: README.md  conftest.py  test_auth.py  test_category_controller.py  test_category_repository.py  test_category_service.py  test_expense_controller.py  test_expense_repository.py  test_expense_service.py  test_health_controller.py  test_html_injector.py  test_import_controller.py  test_import_service.py  test_income_controller.py  test_income_repository.py  test_income_service.py  test_income_type_controller.py  test_income_type_repository.py  test_income_type_service.py  test_month_controller.py  test_month_repository.py  test_month_service.py  test_period_controller.py  test_period_repository.py  test_period_service.py  test_root_endpoint.py  test_summary_controller.py  test_summary_service.py
backend/utils/: auth.py  config.py  email_sender.py  html_injector.py
tui/: CLAUDE.md  Cargo.toml  Cross.toml  Makefile  README.md  go.mod  main.go
tui/src/: app.rs  lib.rs  main.rs
tui/src/ui/: mod.rs  (+3 more)
tui/tests/: models_test.rs  state_test.rs
(+331 files in other folders)
