[package]
name = "budget-tui"
version = "0.0.1"
edition = "2021"
authors = ["Appz Budget Team"]
description = "Terminal User Interface for Budget Management"
license = "MIT"
readme = "README.md"
keywords = ["tui", "budget", "finance", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
directories = "5.0"
toml = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"

# Unicode handling
unicode-width = "0.2"

# URL encoding
urlencoding = "2.1"

[dev-dependencies]
mockito = "1.6"
pretty_assertions = "1.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
